tests/compile_fail/endpoint_missing_security.stderr
error: a³ endpoint requires a security declaration.
         Add #[a3_security(jwt, scopes = [...])] or #[a3_security(none)] to explicitly opt out.
 --> $WORKSPACE/tests/compile_fail/endpoint_missing_security.rs
  |
  | async fn test_handler(_ctx: A3Context) -> A3Result<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
